[package]
name = "rustPhoton"
version = "0.1.0"
edition = "2021"

[lib]
name = "boson"
path = "src/core/mod.rs"

[[bin]]
name = "apitests"
path = "tests/apitests/mod.rs"

[[bin]]
name = "shell"
path = "apps/shell/main.rs"

[dependencies]
log = "0.4.20"
bs58 = "0.5.0"
hex = "0.4"
libc = "0.2.151"
libsodium-sys-stable = "1.20.4"
static_assertions = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] }
ciborium = "0.2.1"
ciborium-io = "0.2.1"
